--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
 </head>
 <body>
     <header>
-        <nav>
-            
+        <nav class="nav-bar">
+            <div class="logo inter-font">LOGO</div>
+            <div class=""><a href=""><button class="sign-up button-colors raleway-font">Sign Up</button></a></div>
         </nav>
+        <div class="banner-container">
+            <div class="banner-text raleway">Cool Dark UI Template for Webflow Agencies!</div>
+            <div><a href=""><button class="banner-button button-colors">Stay Focused</button></a></div>
+        </div>
     </header>
     <main>
 
