--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
         </div>
     </header>
     <main>
+        <section class="action-container">
+                <div class="action-sentence">
+                    <div class="action-text raleway">See It in Action</div>
+                    <div class="action-paragraph">Explore the live preview and imagine your <br>brand in this bold new look.</div>
+                    <div class=""><a href=""><button class="action-button button-colors">Launch Live Preview</button></a></div>
+                </div>
+              <div><img class="action-image" src="Assets/wc-mini.png" alt=""></div>
+            </div>
+        </section>
 
     </main>
     <footer>    
