--- a/index.html
+++ b/index.html
@@ -27,7 +27,25 @@
               <div><img class="action-image" src="Assets/wc-mini.png" alt=""></div>
             </div>
         </section>
-
+        <section class="activity-container">
+            <div class="activity-content">
+                <div class="activity-text raleway">Joined Thousands of Productive Users</div>
+                <div class="activity-rate inter-font">
+                    <div class="rate-1">
+                        <div>50K</div>
+                        <div class="rate-percentage">Active Users</div>
+                    </div>
+                    <div class="rate-2">
+                        <div>2M+</div>
+                        <div class="rate-percentage">Focus Sessions</div>
+                    </div>
+                    <div class="rate-3">
+                        <div>95%</div>
+                        <div class="rate-percentage">Satisfaction Rate</div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>    
 
