--- a/index.html
+++ b/index.html
@@ -46,6 +46,53 @@
                 </div>
             </div>
         </section>
+        <section class="comment-container">
+            <div class="comment-header raleway">What our users say</div>
+            <div class="comments">
+                <div class="comment-1">
+                    <div class="comment-part-1"><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""></div>
+                    <div class="comment-part-2">
+                        <div class="comment-text inter-font">Loved by Designers</div>
+                        <div class="comment-paragraph inter-font">This template instantly leveled up our presence.” – Studio Vertex</div>
+                    </div>
+                    <div class="comment-part-3">
+                        <div class="comment-image"><img src="Assets/avatar.png" alt=""></div>
+                        <div class="comment-name-date">
+                            <div>Reviewer name</div>
+                            <div><span>Date</span></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="comment-1">
+                    <div class="comment-part-1"><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""></div>
+                    <div class="comment-part-2">
+                        <div class="comment-text inter-font">Loved by Designers</div>
+                        <div class="comment-paragraph inter-font">This template instantly leveled up our presence.” – Studio Vertex</div>
+                    </div>
+                    <div class="comment-part-3">
+                        <div class="comment-image"><img src="Assets/avatar.png" alt=""></div>
+                        <div class="comment-name-date">
+                            <div>Reviewer name</div>
+                            <div><span>Date</span></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="comment-1">
+                    <div class="comment-part-1"><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""></div>
+                    <div class="comment-part-2">
+                        <div class="comment-text inter-font">Loved by Designers</div>
+                        <div class="comment-paragraph inter-font">This template instantly leveled up our presence.” – Studio Vertex</div>
+                    </div>
+                    <div class="comment-part-3">
+                        <div class="comment-image"><img src="Assets/avatar.png" alt=""></div>
+                        <div class="comment-name-date">
+                            <div>Reviewer name</div>
+                            <div><span>Date</span></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>    
 
