--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
                 </div>
             </div>
         </section>
-        <div class="focus-container">
+        <section class="focus-container">
             <div class="focus-text raleway">Ready to focus better</div>
             <div class="focus-paragraph inter-font">This template instantly leveled up our presence.” – Studio Vertex</div>
             <div><a href=""><button class="focus-button button-colors">Ger Started Free</button></a></div>
             <div class="focus-image"><img src="Assets/wc-big.png" alt=""></div>
-        </div>
+        </section>
     </main>
     <footer>    
 
