--- a/index.html
+++ b/index.html
@@ -99,6 +99,18 @@
             <div><a href=""><button class="focus-button button-colors">Ger Started Free</button></a></div>
             <div class="focus-image"><img src="Assets/wc-big.png" alt=""></div>
         </section>
+        <section class="detail-container">
+            <div class="detail-text raleway">Let’s Get in Touch</div>
+            <div class="detail-area inter-font">
+                <label for="email">Email</label>
+                <input type="email" name="" id="" placeholder="example@email.com">
+                <label for="name">Name</label>
+                <input type="text" name="" id="" placeholder="Full Name">
+                <label for="message">Message</label>
+                <textarea class="inter-font" name="message" id="" placeholder="write your message...."></textarea>
+                <a href=""><button class="detail-button">Get in Touch</button></a>
+            </div>
+        </section>
     </main>
     <footer>    
 
