footer done final push

--- a/index.html
+++ b/index.html
@@ -113,7 +113,16 @@
         </section>
     </main>
     <footer>    
-
+        <div class="footer-container">
+            <div class="footer-text inter-font">LOGO</div>
+            <div class="footer-paragraph"><p>Ready to elevate your online presence? Contact us today to discuss <br>your project and discover how we can bring your vision to life.</p></div>
+            <div class="footer-detail inter-font">
+            <div class="">Home</div>
+            <div class="">About</div>
+            <div class="">How it Works</div>
+            <div class="">Service</div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
